--- a/style.css
+++ b/style.css
@@ -95,3 +95,26 @@ a.active{
     padding-bottom: 8px;
     margin-top: 0;
 }
+
+@media only screen and (max-width: 1200px){
+    .card {
+        width: 100%;
+    }
+    .about {
+        margin: 100px 0 100px 100px;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .card {
+        width: 100%;
+        padding: 0;
+    }
+    .gallery {
+        padding: 8px;
+    }
+    .about {
+        margin: 100px auto;
+        min-width: 450px;
+    }
+}
